--- a/client/ui/styles/style.css
+++ b/client/ui/styles/style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: coolvetica_rg;
-    src: url(../font/coolvetica_rg.ttf);
+    src: url(../fonts/coolvetica_rg.ttf);
 }
 
 body {
     color: #ffffff;
-    font-family: made-black;
+    font-family: coolvetica_rg;
     overflow: hidden;
 }
 
@@ -58,4 +58,24 @@ svg.radial-progress circle.complete {
 svg.radial-progress text {
     fill: #fff;
     text-anchor: middle;
+}
+
+.popup {
+    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    display: inline-block;
+    padding: 10px;
+}
+
+.popup a {
+    color: #ffffff;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.popup a:hover {
+    color: #266FA9;
+    text-decoration: none;
+    cursor: pointer;
 }
