--- a/client/ui/styles/style.css
+++ b/client/ui/styles/style.css
@@ -61,14 +61,17 @@ svg.radial-progress text {
 }
 
 .popup {
+    top: 25%;
     background-color: rgba(255, 255, 255, 0.5);
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     display: inline-block;
     padding: 10px;
+    position: relative;
 }
 
 .popup a {
+    margin-right: 10px;
     color: #ffffff;
     font-weight: bold;
     text-decoration: none;
