--- a/client/ui/styles/style.css
+++ b/client/ui/styles/style.css
@@ -82,3 +82,89 @@ svg.radial-progress text {
     text-decoration: none;
     cursor: pointer;
 }
+
+/* LOCKPICK MINIGAME */
+.minigame_lockpick {
+    margin: 10vh;
+    text-align: center;
+    color: #fefefe;
+}
+
+#circle {
+    /*may need to revisit the top setting*/
+    top: -73px;
+    position: relative;
+    width: 15em;
+    height: 15em;
+    border-radius: 50%;
+    margin: -13.6em auto;
+    border: 2px solid #fefefe;
+    z-index: 1;
+    transition: all 15s linear;
+}
+
+#circle:hover {
+    cursor: pointer;
+    cursor: hand;
+}
+
+#circle2 {
+    width: 15em;
+    height: 15em;
+    border-radius: 50%;
+    margin: 0 auto;
+    border: 2px solid #fefefe;
+}
+
+#pointer {
+    height: 1.5em;
+    width: 12px;
+    background-color: #2ecc71;
+    margin: -0.75em auto;
+    border-radius: 4px;
+    z-index: 999;
+    position: relative;
+}
+
+p {
+    margin-top: -3.3em;
+    line-height: 1em;
+    font-size: 3em;
+    font-weight: 100;
+    color: #fefefe;
+}
+
+p>h4 {
+    font-size: 0.5em;
+    margin-top: -0.5em;
+    font-weight: 100;
+    color: #fefefe;
+}
+
+.point {
+    position: relative;
+    z-index: 10;
+    width: 1.5em;
+    height: 1.5em;
+    border-radius: 50%;
+    background-color: #2ecc71;
+    margin: -1em auto;
+    border: 4px solid #222;
+    box-shadow: 0 0 0 1pt #2ecc71;
+    animation: pulse 1s ease-in-out infinite;
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 1pt #2ecc71;
+    }
+
+    50% {
+        box-shadow: 0 0 0 2.5pt #2ecc71;
+    }
+}
+
+.hidden {
+    transition: none !important;
+    visibility: hidden;
+}
