--- a/client/ui/styles/style.css
+++ b/client/ui/styles/style.css
@@ -169,3 +169,9 @@ p>h4 {
     transition: none !important;
     visibility: hidden;
 }
+
+.eye {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+}
